web/bundles/ADG/css/comu.css
/*Custom layout*/

.row, body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom{
	margin-right: 0px;
}
.fixed-position {
	position: fixed;
}

.centered-text {
    text-align:center;
} 

html, body, .container, .content {
    height: 100%;
}
 
.container, .content {
    position: relative;
}
 
.proper-content {
    padding-top: 50px; /* >= navbar height */
    padding-left: 40px;
    padding-right: 40px;
}
 
.wrapper {
	
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -90px; /* same as the footer */
}
 
.push {
    height: 90px; /* same as the footer */
}

.footer-wrapper {
    position: relative;
    height: 90px;
    text-align: center;
    background-color: #222222;
  	border-color: #080808;
  	color: #999;
  	border-top: 1px solid transparent;
}

a.foot {
	color: #999;
	margin-right: 10px;
}

.account-container {
	width: 330px; 
	display: block;
	margin: 60px auto 0 auto;
	margin-bottom: 10px;
	background: #f9f9f9;
	
	border: 1px solid #d5d5d5;
	
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;

	box-shadow:  0px 0px 2px #dadada, inset 0px -3px 0px #e6e6e6;
}

.content-form {
	padding: 16px 28px 23px;
} 

.col-xs-4{
	margin-left: -15px;
}

article {
    text-align: justify;
}

.marginleft {
	margin-left: 15px;
}
.nav>li>a {
	padding-right: 10px;
	padding-left: 10px;
}
.lessMarginBot{
	margin-bottom:-1px;
}


/* Vertical spacers */
.space50 {
    height: 50px;
}

.space100 {
    height: 100px;
}

.space10 {
    height: 10px;
}

.space150 {
    height: 150px;
}

.space5 {
    height: 5px;
}


/*------------------------------------------------------------------
Format per imprimir
*/

@media print
{
  .imprimir{
  	padding-left:15px;
  }
  .noimprimir, noimprimir *
    {
        display: none !important;
    }
}

/*------------------------------------------------------------------
[1. Max Width: 400px]
*/

@media (max-width: 400px) {

	.proper-content{
		padding-left: 10px;
		padding-right: 10px;
	}
	
	
	.account-container {
		width: 280px;
	}
	
	.content-form{
		padding: 6px 8px 23px;
	}
	
	footer-wrapper{
		margin-right: -10px;
	}
	
	a.foot{
		margin-right: 0px;
	}

}


/*------------------------------------------------------------------
[2. Max Width: 345px]
* Can't get smaller than 345 px;
*/

@media (max-width: 345px) {
	body, .navbar {
		min-width: 345px;
	}
}

